# alpasafe

./: .gitignore
safeworld-alpamayo/: .gitignore  README.md  pyproject.toml
safeworld-alpamayo/configs/: data_physicalai.yaml  eval_closed_loop.yaml  eval_open_loop.yaml  inference_alpamayo.yaml  world_model_v1.yaml
safeworld-alpamayo/scripts/: run_00_build_index.sh  run_01_alpamayo_inference.sh  run_02_mine_long_tail.sh  run_03_build_world_model_dataset.sh  run_04_train_world_model_v1.sh  run_05_eval_open_loop.sh  run_06_eval_gate.sh
safeworld-alpamayo/tasks/: INDEX.md  T00_project_scaffold.md  T01_environment_and_config.md  T02_data_schema_and_index.md  T03_alpamayo_inference_wrapper.md  T04_long_tail_mining.md  T05_safety_predicates.md  T06_reasoning_action_world_consistency.md  T07_counterfactual_actions.md  T08_world_model_dataset.md  T09_world_model_v1.md  T10_auditor_and_calibration.md  T11_open_loop_experiments.md  T12_closed_loop_or_replay_gate.md  T13_report_and_figures.md  T14_alpamayo_topk_integration.md  T15_topk_candidate_schema.md  T16_topk_selection_protocol.md  T17_oracle_label_and_no_leakage_eval.md  T18_safeworld_topk_selector.md  T19_k_sweep_recoverability_eval.md  T20_real_longtail_ood_plan.md  T21_method_design_freeze.md  T22_alpasim_nurec_candidate_rollout_audit.md  T23_real_rollout_and_evaluator_contracts.md  T24R1_access_and_environment_preflight.md  T24R2_alpasim_single_scene_bringup.md  T24R3_alpamayo15_real_inference.md  T24R4_real_k2_candidate_rollout.md  T24R5_post_smoke_semantics_and_provenance.md  T24_real_k2_single_scene_smoke.md  (+6 more)
(+59 files in other folders)
